force-app/main/default/objects/Asset_Intake_Personnel__c/Asset_Intake_Personnel__c.object-meta.xml
<CustomObject>
    <label>Asset Intake Personnel</label>
    <nameField>
        <displayFormat>AIPN-{00000000}</displayFormat>
        <label>Intake Personnel Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Intake Personnel</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>