force-app/main/default/objects/Asset_Intake_Personnel__c/fields/Client_Engagement_Model__c.field-meta.xml
<CustomField>
    <fullName>Client_Engagement_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Engagement Model</label>
    <referenceTo>SymphonyLF__Client_Engagement_Model__c</referenceTo>
    <relationshipLabel>Asset Intake Personnel</relationshipLabel>
    <relationshipName>Asset_Intake_Personnel</relationshipName>
    <type>Lookup</type>
</CustomField>