force-app/main/default/objects/Asset_Intake_Personnel__c/fields/Personnel__c.field-meta.xml
<CustomField>
    <fullName>Personnel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Personnel</label>
    <referenceTo>SymphonyLF__Person__c</referenceTo>
    <relationshipLabel>Asset Intake Personnel</relationshipLabel>
    <relationshipName>Asset_Intake_Personnel</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>