force-app/main/default/objects/Asset_Intake_Personnel__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Originating Attorney</fullName>
            </value>
            <value>
                <fullName>Annuity Specialist</fullName>
            </value>
            <value>
                <fullName>Backup Attorney</fullName>
            </value>
            <value>
                <fullName>CC Law Firm Personnel</fullName>
            </value>
            <value>
                <fullName>Client Representative</fullName>
            </value>
            <value>
                <fullName>Copy Contact</fullName>
            </value>
            <value>
                <fullName>Correspondence Contact</fullName>
            </value>
            <value>
                <fullName>Docketer</fullName>
            </value>
            <value>
                <fullName>Docketing Management</fullName>
            </value>
            <value>
                <fullName>IDS Specialist</fullName>
            </value>
            <value>
                <fullName>Legal Assistant</fullName>
            </value>
            <value>
                <fullName>Managing (Supervising) Attorney</fullName>
            </value>
            <value>
                <fullName>Outside Legal Personnel</fullName>
            </value>
            <value>
                <fullName>Paralegal</fullName>
            </value>
            <value>
                <fullName>Responsible (Billing) Attorney</fullName>
            </value>
            <value>
                <fullName>Working Attorney</fullName>
            </value>
            <value>
                <fullName>Foreign Associate</fullName>
            </value>
            <value>
                <fullName>Annuity Payment Provider</fullName>
            </value>
            <value>
                <fullName>Responsible Partner</fullName>
            </value>
            <value>
                <fullName>Annuity Payment Provider Rep</fullName>
            </value>
            <value>
                <fullName>Outside Legal</fullName>
            </value>
            <value>
                <fullName>Outside Lawfirm</fullName>
            </value>
            <value>
                <fullName>Quicklinks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>